@@ -10416,6 +10416,12 @@ sign.alias=pvktmp:3852567a-45er-567y-w456-23456789sdft</programlisting>Sign
         </listitem>
 
         <listitem>
+          <para>Fix: Now properly rendering transition's diamond on the tail
+          (it was not properly rendered when transition expression was set and
+          then removed)</para>
+        </listitem>
+
+        <listitem>
           <para>Linux tar.gz distributions now built under windows</para>
         </listitem>
 
